--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,6 +9,13 @@
    <!-- Favicon -->
    <link href="assets/img/favicon.ico" rel="icon">
 
+   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
+
+   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap" rel="stylesheet">
+
+   <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600&display=swap" rel="stylesheet">
+
+
    <!-- Google Web Fonts -->
    <link rel="preconnect" href="https://fonts.gstatic.com">
    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">  
@@ -38,6 +45,7 @@
       <script src="assets/lib/tempusdominus/js/moment.min.js"></script>
       <script src="assets/lib/tempusdominus/js/moment-timezone.min.js"></script>
       <script src="assets/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+      <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
   
       <!-- Template Javascript -->
       <script src="assets/js/main.js"></script>
